Closed Bug 288656 Opened 21 years ago Closed 21 years ago

Events not getting delivered to <svg:image> if fill=none

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: tor, Assigned: tor)

Details

Attachments

(1 file, 1 obsolete file)

Per the specification, the fill and stroke properties should not affect the event processing of raster images.
Attachment #179286 - Flags: review?(alex)
Attachment #179286 - Attachment is obsolete: true
Attachment #179295 - Flags: review?(alex)
Attachment #179295 - Flags: review?(alex) → review+
Attachment #179286 - Flags: review?(alex)
Checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: