Bug 288656 - Events not getting delivered to <svg:image> if fill=none.  r=afri